Made ledger port configurable.

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ POSTGRES_PASSWORD=secret
 # Daml-on-SQL settings
 DAML_SDK_VERSION=1.10.0
 LEDGER_ID=example
+LEDGER_PORT=6865
 JDBC_URL=jdbc:postgresql://postgres-database:5432/postgres?user=${POSTGRES_USER}&password=${POSTGRES_PASSWORD}
 
 # JSON API settings
