Changed entrypoint from shell form to allow additional arguments to be passed in.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     restart: on-failure
     depends_on:
       - ledger-api
-    entrypoint: daml json-api
-    command:
+    entrypoint: ["daml", "json-api"]
+    command: >
       --address=0.0.0.0
       --ledger-host=ledger-api
       --ledger-port=${LEDGER_PORT}
